[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "OpenEnv environment for customer support ticket management"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.openenv]
name = "customer-support-env"
version = "1.0.0"
spec = "openenv/v1"
tasks = ["classify", "route", "respond"]
entry_point = "server.app:app"
